[tool.poetry]
name = "backend"
version = "1.0.0"
description = ""
authors = ["Philipp Matthes <philipp.matthes@tu-dresden.de>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=4.0,<5.0"
psycopg2 = ">=2.8,<3.0"
numpy = ">=1.13,<2.0"
tqdm = ">=4.62.3,<5.0"
pyproj = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
