[tool.poetry]
name = "backend"
version = "1.0.0"
description = ""
authors = ["Philipp Matthes <philipp.matthes@tu-dresden.de>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=4.0,<5.0"
psycopg2 = ">=2.8,<3.0"
numpy = ">=1.13,<2.0"
requests = ">=2.27,<3.0"
gunicorn = "20.1.0"
optuna = ">=2.10.0,<3.0"
scikit-learn = "1.1.2"
Shapely = "^1.8.0"
imblearn = "^0.0"
tsfresh = "0.17.0"
statsmodels = "0.12.1"
redis = ">=4.1.0,<5.0"
tqdm = ">=4.62.3,<5.0"
pyproj = "^3.3.1"
matplotlib = "3.5.2" 
seaborn = "0.11.2"
pandas = "1.4.3" 
matplotlib-venn = "0.11.7"
scikit-optimize = "0.9.0"
hyperopt = "0.2.7"
sqlalchemy = "1.4.46"

[tool.poetry.dev-dependencies]
jupyter = "1.0.0"
ipython = "8.12.0"
django-extensions = "3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
